zapolnenue_yaml/ubuntu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pod
  namespace: edu-unruffled-swirles
spec:
  volumes:
    - name: pg-root-cert
      secret:
        secretName: root-cert
  containers:
    - name: ubuntu-container
      image: ubuntu:22.04
      command: [ "/bin/sh" ]
      args:
        - -c
        - |
          apt-get update &&
          apt-get install -y postgresql-client &&
          mkdir -p /root/.postgresql && 
          sleep 40000
      volumeMounts:
        - name: pg-root-cert
          mountPath: /root/.postgresql
          readOnly: true
