zapolnenue_yaml/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: edu-unruffled-swirles
spec:
  selector:
    app: django-app
  ports:
    - nodePort   : 30111
      protocol   : TCP
      port       : 80
      targetPort : 80
  type: NodePort
