zapolnenue_yaml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: edu-unruffled-swirles
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name       : http
      nodePort   : 30111
      protocol   : TCP
      port       : 80
      targetPort : 80
