zapolnenue_yaml/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  namespace: edu-unruffled-swirles
spec:
  ingressClassName: nginx
  rules:
    - host: edu-unruffled-swirles.sirius-k8s.dvmn.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-app-service
                port:
                  number: 80
